# license_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findlicensecc.cmake
src/: license_demo.cpp  license_demo.h
